--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,8 @@
+@keyframes fadeIn {
+   0% {opacity: 0;}
+   100% {opacity: 1;}
+} 
+
 html, body {
 	position: relative;
 	width: 100%;
@@ -5,59 +10,50 @@ html, body {
 }
 
 body {
-	color: #333;
+	--colorText: #002b21;
+	/* --colorTextLighten: #0f4d3e; */
+	--colorTextMuted: #87a69d;
+	--colorTextMutedLight: #e7f3ef;
+	--colorTextEm: #114e3e;
+	--colorPrimary: #009c73;
+	--colorBorder: #9cccc0;
+	--colorPrimaryGreyish: #e7f3ef;
+	--colorBackground: #eafff8;
+	--colorBackgroundDark: #ccf3e5;
+	--colorBackgroundLight: #f4fffb;
+	
+	background: var(--colorBackground);
+	color: var(--colorText);
 	margin: 0;
-	padding: 8px;
+	padding: 0;
+	position: relative;
 	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	font-family: "TheMix", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
 a {
-	color: rgb(0,100,200);
-	text-decoration: none;
+	color: var(--colorTextEm);
+	text-decoration: underline;
+	text-underline-offset: 2px;
+	text-decoration-color:  var(--colorBorder);
+	position: relative;
 }
 
 a:hover {
-	text-decoration: underline;
+	color: var(--colorPrimary);
 }
 
 a:visited {
-	color: rgb(0,80,160);
+	color: var(--colorPrimary);
 }
 
 label {
 	display: block;
 }
-
-input, button, select, textarea {
-	font-family: inherit;
-	font-size: inherit;
-	-webkit-padding: 0.4em 0;
-	padding: 0.4em;
-	margin: 0 0 0.5em 0;
-	box-sizing: border-box;
-	border: 1px solid #ccc;
-	border-radius: 2px;
+svg text{
+   -webkit-user-select: none;
+   -moz-user-select: none;
+   -ms-user-select: none;
+   user-select: none;
 }
 
-input:disabled {
-	color: #ccc;
-}
-
-button {
-	color: #333;
-	background-color: #f4f4f4;
-	outline: none;
-}
-
-button:disabled {
-	color: #999;
-}
-
-button:not(:disabled):active {
-	background-color: #ddd;
-}
-
-button:focus {
-	border-color: #666;
-}
